@@ -1,3 +1,8 @@
+2019-08-07  Akira Kakuto  <kakuto@w32tex.org>
+
+	* synctex.c: Improve support of non-ascii path names
+	(Windows only).
+
 2018-10-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* synctex.c: Cleanup for non-ascii file names (w32 only).
